tests/errors/4_type_errors/sample15.ifj16.java
class Main {
    static String a;
    static void run() {}
    static void r1un2(int a, double b) {
        Main.a = ifj16.substr("dsa"); // wrong number of parameters
    }
}

